# Customer-Churn-Prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
notebooks/: 01_exploration.ipynb  02_model_training.ipynb  02_optimalization.ipynb
src/: bayes_search.py  data_loading.py  data_split.py  feature_engineering.py  model.py  pipeline.py  preprocessing.py  utils.py
