[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject"
version = "0.1.0"
dependencies = [
    "pandas"
]

[tool.split]
valid_size = 20
test_size = 10
# train_size = 100 - (test_size + valid_size)

[tool.xgb_bayes]
n_trials = 10
random_state = 42
early_stopping_rounds = 50
processed_dir = "data/split"
target_name = "churn"
objective_name = "binary:logistic"
num_boost_round = 800

[tool.xgb_bayes.space]
max_depth        = { type = "int",   lower = 3,    upper = 10 }
max_bin          = { type = "int",   lower = 64,   upper = 256 }
eta              = { type = "float", lower = 0.01, upper = 0.3,  log = true }  # learning rate 
subsample        = { type = "float", lower = 0.5,  upper = 1.0 }
colsample_bytree = { type = "float", lower = 0.5,  upper = 1.0 }
min_child_weight = { type = "float", lower = 1.0,  upper = 10.0 }
gamma            = { type = "float", lower = 0.0,  upper = 5.0 }
reg_lambda       = { type = "float", lower = 1e-4, upper = 10.0, log = true }
reg_alpha        = { type = "float", lower = 1e-4, upper = 10.0, log = true }
grow_policy      = { type = "cat",   values = ["depthwise", "lossguide"] }
booster          = { type = "cat",   values = ["gbtree", "dart"] }
sampling_method  = { type = "cat", values = ["uniform"] }  # opcjonalnie